--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svrollbar",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "stylable scrollbar made by svelte",
   "repository": {
     "type": "git",
@@ -14,12 +14,13 @@
   "license": "MIT",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
-  "svelte": "src/index.js",
+  "svelte": "src/index.ts",
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@tsconfig/svelte": "^1.0.10",
@@ -28,10 +29,12 @@
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.1.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.6",
     "rollup": "^2.40.0",
     "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.34.0",
     "svelte-preprocess": "^4.6.9",
     "tslib": "^2.1.0",
