--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svrollbar",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "stylable scrollbar made by svelte",
   "repository": {
     "type": "git",
@@ -14,19 +14,14 @@
   "license": "MIT",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
-  "svelte": "src/index.ts",
+  "svelte": "src/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
+    "lint": "prettier --check ./src && eslint ./src --ext .js,.jsx,.ts,.tsx && svelte-check --ignore example",
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-typescript": "^8.2.0",
-    "@tsconfig/svelte": "^1.0.10",
-    "@types/resize-observer-browser": "^0.1.5",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.1.0",
     "jest": "^26.6.3",
@@ -34,11 +29,9 @@
     "prettier-plugin-svelte": "^2.1.6",
     "rollup": "^2.40.0",
     "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "sveld": "^0.7.1",
     "svelte": "^3.34.0",
-    "svelte-preprocess": "^4.6.9",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.2"
+    "svelte-check": "^1.2.1"
   },
   "keywords": [
     "svelte",
@@ -46,6 +39,7 @@
   ],
   "files": [
     "src",
-    "lib"
+    "lib",
+    "types"
   ]
 }
