--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public",
+    "start": "sirv ../docs",
     "validate": "svelte-check"
   },
   "devDependencies": {
