--- a/package.json
+++ b/package.json
@@ -18,13 +18,23 @@
   "types": "types/index.d.ts",
   "scripts": {
     "lint": "prettier --check ./src && eslint ./src --ext .js,.jsx,.ts,.tsx && svelte-check --ignore example",
+    "test": "jest",
+    "test:inspect": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/svelte": "^3.0.3",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.2.1",
     "jest": "^26.6.3",
+    "jest-transform-svelte": "^2.1.1",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.6",
     "rollup": "^2.40.0",
