--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: packages/desktop/node_modules
+          path: node_modules
           key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
       
       - name: Install Dependencies
