--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svrollbar",
   "version": "0.9.2",
-  "description": "stylable scrollbar made by svelte",
+  "description": "simple custom scrollbar made by svelte",
   "repository": {
     "type": "git",
     "url": "https://github.com/daylilyfield/svrollbar"
@@ -45,7 +45,9 @@
   },
   "keywords": [
     "svelte",
-    "scrollbar"
+    "custom",
+    "scrollbar",
+    "component"
   ],
   "files": [
     "src",
