fix: available on sveltekit ssr

--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/eslint-parser": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@testing-library/jest-dom": "^5.11.9",
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@testing-library/dom": "^7.31.2",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/svelte": "^3.0.3",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-jest": "^24.2.1",
-    "jest": "^26.6.3",
-    "jest-transform-svelte": "^2.1.1",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.1.6",
-    "rollup": "^2.40.0",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.1.1",
+    "jest": "^27.4.7",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
+    "rollup": "^2.70.1",
     "rollup-plugin-svelte": "^7.1.0",
-    "sveld": "^0.7.1",
-    "svelte": "^3.34.0",
-    "svelte-check": "^1.2.1"
+    "sveld": "^0.13.4",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.5",
+    "svelte-jester": "^2.3.2"
   },
   "keywords": [
     "svelte",
