--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-svelte3": "^3.4.1",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.6.0",
